tests/models/struct/unnamed/u128/pass/gt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(gt = 2)]
    u128
);
fn main() {}
