tests/models/struct/unnamed/u128/fail/gt.rs
use dade::model;
#[model]
struct TestModel (
   #[field(gt = 2.0)]
    u128
);
fn main() {}
